--- a/kernel/report.Rmd
+++ b/kernel/report.Rmd
@@ -3,13 +3,10 @@ title: "Predicting Operational Efficiency Using Cost Metrics in the Airline Indu
 author: "Group 3"
 date: "18/11/2021"
 output:
-  pdf_document:
-    latex_engine: xelatex
   html_document:
     df_print: paged
-header-includes:
-- \usepackage{caption}
-- \usepackage{multirow}
+  pdf_document:
+    latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
@@ -31,27 +28,17 @@ DISCUSSION PERSON, PLEASE ADD TWO RELEVANT SENTENCES HERE (ONE FOR RESULTS AND O
 
 The dataset, obtained through Greene (2003), contains empirical evidence relating to the cost of the airline industry. It consists of a panel of 6 observations of Airlines in the United States over 15 years- from 1970 to 1984, yielding 90 observations in total. Data was collected for all six firms in the same fifteen years. 
 
-Each observation consists of six variables relating to cost:  airline, year,  pf (fuel price), lf (load factor, which is the average capacity utilization of the fleet), output (revenue, measured in revenue per passenger-mile flown), and cost (total cost per $1,000). Fuel price, load factor, output, and cost are numerical variables. Airline is treated as an indicator variable that classifies each airline in a distinct category. We control for the year of observation; however, this is done by using a continuous variable instead of individual dummies, as this allows the prediction of future years. All summary statistics are shown in Table \ref{tab:summary-stats}.
+Each observation consists of six variables relating to cost:  airline, year,  pf (fuel price), lf (load factor, which is the average capacity utilization of the fleet), output (revenue, measured in revenue per passenger-mile flown), and cost (total cost per $1,000). Fuel price, load factor, output, and cost are numerical variables. Airline is treated as an indicator variable that classifies each airline in a distinct category. We control for the year of observation; however, this is done by using a continuous variable instead of individual dummies, as this allows the prediction of future years. All summary statistics are shown in Table 1.
 
 All observations are used for the study. All variables except the airline indicator variable are scaled to create z-scores $(X – \mu) / \sigma$  where $\mu$ and $\sigma$ represent the mean and the standard deviation, respectively. Scaling ensures that the variables are comparable, as our approach relies on the distance between observations.
 
-\begin{table}[h!]
-\centering
-\caption{Summary Statistics of Airlines Data 1970-1984}
-\label{tab:summary-stats}
-\scriptsize
-\begin{tabular}{lllllllll}
-\hline
-Variable                                  & Count & Mean    & Std     & Min    & 25\%   & 50\%   & 75\%    & Max     \\
-\hline
-Revenue per Passenger-Mile Flown (in USD)                   & 90    & 0.54    & 0.53    & 0.04   & 0.14   & 0.31   & 0.95    & 1.94    \\
-Total Cost (in million USD)               & 90    & 1,122.52 & 1,192.07 & 68.98  & 292.05 & 637.00 & 1,345.97 & 4,748.32 \\
-Fuel Price (x1,000)                       & 90    & 471.68  & 329.50  & 103.80 & 129.85 & 357.43 & 849.84  & 1,015.61 \\
-Load Factor                               & 90    & 56.0\%  & 5.3\%   & 43.2\% & 52.9\% & 56.6\% & 59.5\%  & 67.6\ \\
-\hline
-\end{tabular}
-\end{table}
-
+| Variable                                  | Count |  Mean |  Std |   Min |   25% |   50% |   75% |   Max |
+|:------------------------------------------|------:|------:|-----:|------:|------:|------:|------:|------:|
+| Revenue per Passenger-Mile Flown (in USD) |    90 |  0.54 | 0.53 |  0.04 |  0.14 |  0.31 |  0.95 |  1.94 |
+| Total Cost (in million USD)               |    90 |  1123 | 1192 |    69 |   292 |   637 |  1346 |  4748 |
+| Fuel Price                                |    90 |   472 |  330 |   104 |   130 |   357 |   850 |  1016 |
+| Load Factor                               |    90 | 56.0% | 5.3% | 43.2% | 52.9% | 56.6% | 59.5% | 67.6% |
+Table: Summary Statistics
 
 ## Methodology
 
