--- a/kernel/report.Rmd
+++ b/kernel/report.Rmd
@@ -40,7 +40,7 @@ All observations are used for the study. All variables except the airline indica
 | Total Cost (in million USD)               |    90 |  1123 | 1192 |    69 |   292 |   637 |  1346 |  4748 |
 | Fuel Price                                |    90 |   472 |  330 |   104 |   130 |   357 |   850 |  1016 |
 | Load Factor                               |    90 | 56.0% | 5.3% | 43.2% | 52.9% | 56.6% | 59.5% | 67.6% |
-Table NUMBER: Summary Statistics (SD: Standard deviation)
+Table 1: Summary Statistics (SD: Standard deviation)
 
 ## Methodology
 
@@ -111,9 +111,8 @@ In both the cross-validation and the test set our predictions will be tested usi
 
 ## Results
 
-In the cross-validation step, the candidate values for $\lambda$ were 0.001, 0.005, 0.01, 0.05, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50 and 100, the candidates for $\gamma$ were 0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 1, 2, 4, 5 and 10. The candidates for the degrees for the polyspline and the nonhomogeneous kernel were 1, 2, 3, 4, 5, 6, 7, 8, 9 and 10.
+In the cross-validation step, the candidate values for $\lambda$ were 0.001, 0.005, 0.01, 0.05, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50 and 100, the candidates for $\gamma$ were 0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 1, 2, 4, 5 and 10. The candidates for the degrees for the polyspline and the nonhomogeneous kernel were 1, 2, 3, 4, 5, 6, 7, 8, 9 and 10. The best combinations for each kernel togheter with the cross-validation MSE (CV-MSE) and the mean squared prediction error (MSPE).
 
-For the KRR with RBF kernel, $\gamma$ was set to values between 0.01 and 10 ($\gamma \in [0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 1, 2, 4, 5, 10]$
 
 \begin{table}[h]
 \begin{tabular}{lll}
@@ -124,15 +123,13 @@ Nonhomogeneous & 0.00093 & 0.009  & 1 & 2\\
 Polyspline     & 0.0012  & 0.152  & 1 & 2\\
 RBF            & 0.00048 & 0.0026 & 0.001 & 0.05
 \end{tabular}
+\caption{\label{tab:Table 2}}
 \end{table}
 
 
-The set of parameters used in the grid to arrive at this conclusion, we analyzed different parameters for the different kernels described in the method section as well as compared them to an OLS regression and the package built by \citet{groenemodel}.
-
-For all models, we used the same values for $\lambda$, namely 0.001, 0.01, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50 and 100.
-
-### KRR with Linear Kernel
-The analysis of the KRR with linear kernel reveals that the best predictions of the model are provided given lower values for $\lambda$, with the result optimized at $\lambda = 0.1$ ($MSE_{CV} = 0.0026, MSE_{test} = 0.008$; for more information, see Figure \ref{linearcomparison}). 
+The linear kernel achieves the best fit for low values of lambda $\lambda$, with the result optimized at $\lambda = 0.1$ ($MSE_{CV} = 0.0026, MSE_{test} = 0.008$; for more information, see Figure \ref{linearcomparison}). For the KRR with RBF kernel,the lowest measured MSE was achieved using $\lambda = 0.001$ and $\gamma = 0.05$ ($MSE_{CV} = 0.00048, MSE_{test} = 0.0026$(for more information, see Figure \ref{rbfcomparison}). The nonhomogeneous kernel and the polyspline kernel are optimized with $\lambda$ 1 and degress equals to 2. This combination gives us a $MSE_{CV}$ of
+0.0009 and $MSE_{test}$ of 0.0090 for the nonhomogeneous kernel (see \ref{inhomogeneouscomparison}) and $MSE_{CV}$ of
+0.0012 and $MSE_{test}$ of 0.152 for the polyspline (see Figure \ref{polysplinecomparison}).
 
 ```{r  linearcomparison, fig.cap = "KRR with linear kernel: Impact of the choice of lambda parameter on the MSE"}
 crossv_sub <- crossv_output %>% filter(kernel == 'linear')
@@ -144,9 +141,6 @@ crossv_sub %>%
   geom_line()
 ```
 
-### KRR with RBF Kernel
-For the KRR with RBF kernel, $\gamma$ was set to values between 0.01 and 10 ($\gamma \in [0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 1, 2, 4, 5, 10]$. The lowest measured MSE was achieved using $\lambda = 0.001$ and $\gamma = 0.05$ ($MSE_{CV} = 0.00048, MSE_{test} = 0.0026$; for more information, see Figure \ref{rbfcomparison}).
-
 ```{r  rbfcomparison, fig.cap = "KRR with RBF kernel: MSE for different combinations of lambda and gamma"}
 crossv_sub <- crossv_output %>% filter(kernel == 'RBF')
 crossv_sub %>%
@@ -157,12 +151,7 @@ crossv_sub %>%
   scale_fill_gradient(low = "darkgreen", high = "darkred")
 ```
 
-### KRR with Nonhomogeneous Kernel
-To optimize the hyperparameters of the nonhomogeneus kerner, we performed a grid search with the values 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 for the degree of the transformation. We obtained the minimum mse with the combination degree equals to 2 and lambda equals to 1.
-
-The mean mse for the out-of-sample predictions under this model configuration is 0.00093 in the cross-validation and 0.009 in the test set (for more information, see Figure \ref{inhomogeneouscomparison})
-
-
+  
 ```{r  inhomogeneouscomparison, fig.cap = "KRR with inhomogeneous kernel: MSE for different combinations of lambda and d"}
 crossv_sub <- crossv_output %>% filter(kernel == 'inhomogeneous')
 crossv_sub %>%
@@ -172,12 +161,6 @@ crossv_sub %>%
   labs(x ="Log(Lambda)", y = "Degree") +
   scale_fill_gradient(low = "darkgreen", high = "darkred")
 ```
-
-### KRR with polyspline kernel
-For the polyspline kernel, we defined the canditates for the hyperparameter degree as 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, and obtained the same combination as in the nonhomogeneous kernel: a degree of 2 and a lambda of 1. 
-
-The resulting mse of the out-of-sample predictions is slightly higher than for the Nonhomogeneous kernel, at 0.0012 in the crossvalidation and 0.152 in the test set (for more information, see Figure \ref{polysplinecomparison}).
-
 
 ```{r  polysplinecomparison, fig.cap = "KRR with polynomial spline kernel: MSE for different combinations of lambda and r"}
 crossv_sub <- crossv_output %>% filter(kernel == 'polyspline')
@@ -189,12 +172,10 @@ crossv_sub %>%
   scale_fill_gradient(low = "darkgreen", high = "darkred")
 ```
 
-### Bench-Marking
-
 The kernel ridge regression was compared with the linear regression model and to the implementation available in the dsmle package.
 
 The results indicate a good performance of the proprietary implementation: the linear regression showed a MSE of 0.572,
-while the proprietary kernel ridge regression with the optimal combination of kernel and hyperparameters (RBF; parameters set at $\gamma = 0.05$ and $\lambda = 0.001$) predicts with $MSE = 0.0026$. The dsmle implementation (using the same parameters and kernel) is 0.30. As further comparison, the combination 'inhomogeneous kernel', degree of 2 and lambda equals to 1 yields a MSE of 0.01729 for the proprietary implementation and 0.0070 for the MSE of the dsmle package. 
+while the proprietary kernel ridge regression with the optimal combination of kernel and hyperparameters (RBF; parameters set at $\gamma = 0.05$ and $\lambda = 0.001$) predicts with $MSPE = 0.0026$. The dsmle implementation (using the same parameters and kernel) yields a $MSPE$ of 0.30. As further comparison, the combination 'inhomogeneous kernel', degree of 2 and lambda equals to 1 yields a MSE of 0.01729 for the proprietary implementation and 0.0070 for the MSE of the dsmle package. 
 
 ## Discussion
 
